style: reformat code using Black

--- a/Infor-CU-cost-analysis.ipynb
+++ b/Infor-CU-cost-analysis.ipynb
@@ -180,7 +180,7 @@
     "    (\"NB_Infor_200_ITActuals\"),\n",
     "    (\"NB_Infor_200_AMWorkforcePerformance\"),\n",
     "    (\"PL_Infor_100_IngestMaster_AT\"),\n",
-    "    (\"PL_Infor_101_IngestOrchestrator_AT\")\n",
+    "    (\"PL_Infor_101_IngestOrchestrator_AT\"),\n",
     "]\n",
     "\n",
     "activities_df = pd.DataFrame(activities, columns=[\"Item_name\"])\n",
@@ -285,14 +285,21 @@
     "# Load data\n",
     "excel_file = \"Fabric_CU_metrics14days.xlsx\"\n",
     "df = pd.read_excel(excel_file)\n",
-    "csv_file = \"fabric_capacity_units.csv\" \n",
+    "csv_file = \"fabric_capacity_units.csv\"\n",
     "df.to_csv(csv_file, index=False)\n",
     "\n",
-    "#Remove total row in dataset\n",
+    "# Remove total row in dataset\n",
     "df = df[df[\"Workspace\"] != \"Total\"]\n",
     "\n",
-    "columns_to_drop = [\"Billing type\", \"Users\",\"Workspace\", \"Item kind\",\"Successful count\", \"Failed count\"] \n",
-    "df.drop(columns=columns_to_drop, inplace=True, errors='ignore')\n",
+    "columns_to_drop = [\n",
+    "    \"Billing type\",\n",
+    "    \"Users\",\n",
+    "    \"Workspace\",\n",
+    "    \"Item kind\",\n",
+    "    \"Successful count\",\n",
+    "    \"Failed count\",\n",
+    "]\n",
+    "df.drop(columns=columns_to_drop, inplace=True, errors=\"ignore\")\n",
     "\n",
     "rename_dict = {\n",
     "    \"Item name\": \"Item_name\",\n",
@@ -415,22 +422,28 @@
     "activities_df[\"Item_name\"] = activities_df[\"Item_name\"].astype(str)\n",
     "\n",
     "# Step 2: Perform substring match and retain full Item_name from df\n",
-    "activity_names = activities_df[\"Item_name\"].tolist() \n",
-    "df_filtered = df[df[\"Item_name\"].apply(lambda x: any(activity in x for activity in activity_names))].copy()\n",
+    "activity_names = activities_df[\"Item_name\"].tolist()\n",
+    "df_filtered = df[\n",
+    "    df[\"Item_name\"].apply(lambda x: any(activity in x for activity in activity_names))\n",
+    "].copy()\n",
     "\n",
     "# Step 3: Assign execution type and other columns from activities_df based on substring match\n",
     "for _, row in activities_df.iterrows():\n",
-    "    mask = df_filtered[\"Item_name\"].str.contains(re.escape(row[\"Item_name\"]), na=False, case=False)\n",
+    "    mask = df_filtered[\"Item_name\"].str.contains(\n",
+    "        re.escape(row[\"Item_name\"]), na=False, case=False\n",
+    "    )\n",
     "\n",
     "# Step 4: Convert CU/s and Duration/s to per hour\n",
     "columns_to_convert = [\"CU(s)\", \"Duration(s)\"]\n",
-    "df_filtered[[col.replace(\"(s)\", \"(h)\") for col in columns_to_convert]] = df_filtered[columns_to_convert].div(3600)\n",
+    "df_filtered[[col.replace(\"(s)\", \"(h)\") for col in columns_to_convert]] = df_filtered[\n",
+    "    columns_to_convert\n",
+    "].div(3600)\n",
     "\n",
     "# Step 5: Drop original second-based columns\n",
     "df_filtered.drop(columns=columns_to_convert, inplace=True)\n",
     "\n",
     "# Display the result\n",
-    "display(df_filtered)\n"
+    "display(df_filtered)"
    ]
   },
   {
@@ -466,13 +479,14 @@
     "\n",
     "# Compute total CU allocation\n",
     "total_CU_seconds = CU_capacity * seconds_per_minute * minutes_per_hour * hours_per_day\n",
-    "total_CU_hours = total_CU_seconds/3600  # Convert to CU-hours\n",
+    "total_CU_hours = total_CU_seconds / 3600  # Convert to CU-hours\n",
     "\n",
     "# Print the results with clear formatting\n",
-    "print(f\"Total CU Allocation for F64 SKU:\\n\"\n",
-    "      f\" - {total_CU_seconds:,} CU-seconds per day\\n\"\n",
-    "      f\" - {total_CU_hours:,} CU-hours per day\")\n",
-    "\n"
+    "print(\n",
+    "    f\"Total CU Allocation for F64 SKU:\\n\"\n",
+    "    f\" - {total_CU_seconds:,} CU-seconds per day\\n\"\n",
+    "    f\" - {total_CU_hours:,} CU-hours per day\"\n",
+    ")"
    ]
   },
   {
@@ -600,28 +614,34 @@
     "MONTH = 30\n",
     "YEAR = 356\n",
     "\n",
+    "\n",
     "def calculate_execution_costs(df_filtered):\n",
     "    \"\"\"\n",
     "    Calculate PAYG and Reserved cost per execution based on Compute Unit (CU) usage.\n",
-    "    \n",
+    "\n",
     "    Parameters:\n",
     "    df_filtered (pd.DataFrame): Input DataFrame containing CU(h) column.\n",
     "    total_CU_hours (int, optional): Total Compute Units per hour for the given capacity. Default is 1536 for F64.\n",
-    "    \n",
+    "\n",
     "    Returns:\n",
     "    pd.DataFrame: Updated DataFrame with PAYG and Reserved costs.\n",
     "    \"\"\"\n",
-    "    \n",
+    "\n",
     "    # Calculate cost per execution\n",
     "    df_filtered = df_filtered.copy()\n",
-    "    df_filtered[\"PAYG Cost($)\"] = ((df_filtered[\"CU(h)\"] / 14) / TOTAL_CU_HOURS) * TOTAL_DAILYCOST_PAYG\n",
-    "    df_filtered[\"Reserved Cost($)\"] = ((df_filtered[\"CU(h)\"] / 14) / TOTAL_CU_HOURS) * TOTAL_DAILYCOST_RESERVED\n",
-    "    \n",
+    "    df_filtered[\"PAYG Cost($)\"] = (\n",
+    "        (df_filtered[\"CU(h)\"] / 14) / TOTAL_CU_HOURS\n",
+    "    ) * TOTAL_DAILYCOST_PAYG\n",
+    "    df_filtered[\"Reserved Cost($)\"] = (\n",
+    "        (df_filtered[\"CU(h)\"] / 14) / TOTAL_CU_HOURS\n",
+    "    ) * TOTAL_DAILYCOST_RESERVED\n",
+    "\n",
     "    print(\"Cost Per Day for Each Execution\")\n",
     "    return df_filtered\n",
     "\n",
+    "\n",
     "df_filtered = calculate_execution_costs(df_filtered)\n",
-    "df_filtered\n"
+    "df_filtered"
    ]
   },
   {
@@ -708,28 +728,31 @@
     }
    ],
    "source": [
-    "# Compute all the costs for all synapse notebooks and pipelines run \n",
+    "# Compute all the costs for all synapse notebooks and pipelines run\n",
     "# Do this for daily, weekly, monthly, and yearly costs\n",
-    "summary_df = pd.DataFrame({\n",
-    "    \"Total CU(h)\": [\n",
-    "        df_filtered[\"CU(h)\"].sum(),\n",
-    "        df_filtered[\"CU(h)\"].sum() * WEEK,\n",
-    "        df_filtered[\"CU(h)\"].sum() * MONTH,\n",
-    "        df_filtered[\"CU(h)\"].sum() * YEAR\n",
-    "    ],\n",
-    "    \"Total PAYG Cost ($)\": [\n",
-    "        df_filtered[\"PAYG Cost($)\"].sum(),\n",
-    "        df_filtered[\"PAYG Cost($)\"].sum() * WEEK,\n",
-    "        df_filtered[\"PAYG Cost($)\"].sum() * MONTH,\n",
-    "        df_filtered[\"PAYG Cost($)\"].sum() * YEAR\n",
-    "    ],\n",
-    "    \"Total Reserved Cost ($)\": [\n",
-    "        df_filtered[\"Reserved Cost($)\"].sum(),\n",
-    "        df_filtered[\"Reserved Cost($)\"].sum() * WEEK,\n",
-    "        df_filtered[\"Reserved Cost($)\"].sum() * MONTH,\n",
-    "        df_filtered[\"Reserved Cost($)\"].sum() * YEAR\n",
-    "    ]\n",
-    "}, index=[\"Daily\", \"Weekly\", \"Monthly\", \"Yearly\"])\n",
+    "summary_df = pd.DataFrame(\n",
+    "    {\n",
+    "        \"Total CU(h)\": [\n",
+    "            df_filtered[\"CU(h)\"].sum(),\n",
+    "            df_filtered[\"CU(h)\"].sum() * WEEK,\n",
+    "            df_filtered[\"CU(h)\"].sum() * MONTH,\n",
+    "            df_filtered[\"CU(h)\"].sum() * YEAR,\n",
+    "        ],\n",
+    "        \"Total PAYG Cost ($)\": [\n",
+    "            df_filtered[\"PAYG Cost($)\"].sum(),\n",
+    "            df_filtered[\"PAYG Cost($)\"].sum() * WEEK,\n",
+    "            df_filtered[\"PAYG Cost($)\"].sum() * MONTH,\n",
+    "            df_filtered[\"PAYG Cost($)\"].sum() * YEAR,\n",
+    "        ],\n",
+    "        \"Total Reserved Cost ($)\": [\n",
+    "            df_filtered[\"Reserved Cost($)\"].sum(),\n",
+    "            df_filtered[\"Reserved Cost($)\"].sum() * WEEK,\n",
+    "            df_filtered[\"Reserved Cost($)\"].sum() * MONTH,\n",
+    "            df_filtered[\"Reserved Cost($)\"].sum() * YEAR,\n",
+    "        ],\n",
+    "    },\n",
+    "    index=[\"Daily\", \"Weekly\", \"Monthly\", \"Yearly\"],\n",
+    ")\n",
     "\n",
     "# Print another distinct heading\n",
     "print(\"\\n\" + \"🔹\" * 25)\n",
@@ -737,7 +760,7 @@
     "print(\"🔹\" * 25 + \"\\n\")\n",
     "\n",
     "# Display the extended summary DataFrame\n",
-    "display(summary_df)\n"
+    "display(summary_df)"
    ]
   },
   {
@@ -840,18 +863,36 @@
     "total_reserved_24runs = per_run_reserved * 24\n",
     "\n",
     "# Compute weekly, monthly, and yearly costs dynamically\n",
-    "summary_24runs = pd.DataFrame({\n",
-    "    \"Total CU(h)\": [total_CU_24runs, total_CU_24runs * 7, total_CU_24runs * 30, total_CU_24runs * 365],\n",
-    "    \"Total PAYG Cost ($)\": [total_PAYG_24runs, total_PAYG_24runs * 7, total_PAYG_24runs * 30, total_PAYG_24runs * 365],\n",
-    "    \"Total Reserved Cost ($)\": [total_reserved_24runs, total_reserved_24runs * 7, total_reserved_24runs * 30, total_reserved_24runs * 365]\n",
-    "}, index=[\"Daily\", \"Weekly\", \"Monthly\", \"Yearly\"])\n",
+    "summary_24runs = pd.DataFrame(\n",
+    "    {\n",
+    "        \"Total CU(h)\": [\n",
+    "            total_CU_24runs,\n",
+    "            total_CU_24runs * 7,\n",
+    "            total_CU_24runs * 30,\n",
+    "            total_CU_24runs * 365,\n",
+    "        ],\n",
+    "        \"Total PAYG Cost ($)\": [\n",
+    "            total_PAYG_24runs,\n",
+    "            total_PAYG_24runs * 7,\n",
+    "            total_PAYG_24runs * 30,\n",
+    "            total_PAYG_24runs * 365,\n",
+    "        ],\n",
+    "        \"Total Reserved Cost ($)\": [\n",
+    "            total_reserved_24runs,\n",
+    "            total_reserved_24runs * 7,\n",
+    "            total_reserved_24runs * 30,\n",
+    "            total_reserved_24runs * 365,\n",
+    "        ],\n",
+    "    },\n",
+    "    index=[\"Daily\", \"Weekly\", \"Monthly\", \"Yearly\"],\n",
+    ")\n",
     "\n",
     "# Print distinct header\n",
     "print(\"\\n\" + \"🔹\" * 31)\n",
     "print(\"🔹🔹🔹Infor COST SUMMARY (HOURLY RUNS - 24x per day) - New Schedule 🔹🔹🔹\")\n",
     "print(\"🔹\" * 31 + \"\\n\")\n",
     "\n",
-    "display(summary_24runs)\n"
+    "display(summary_24runs)"
    ]
   },
   {
@@ -974,11 +1015,19 @@
     "yearly_reserved = monthly_reserved * 12\n",
     "\n",
     "# Create DataFrame\n",
-    "summary_df = pd.DataFrame({\n",
-    "    \"Total CU(h)\": [daily_CU, weekly_CU, monthly_CU, yearly_CU],\n",
-    "    \"Total PAYG Cost ($)\": [daily_PAYG, weekly_PAYG, monthly_PAYG, yearly_PAYG],\n",
-    "    \"Total Reserved Cost ($)\": [daily_reserved, weekly_reserved, monthly_reserved, yearly_reserved]\n",
-    "}, index=[\"Daily\", \"Weekly\", \"Monthly\", \"Yearly\"])\n",
+    "summary_df = pd.DataFrame(\n",
+    "    {\n",
+    "        \"Total CU(h)\": [daily_CU, weekly_CU, monthly_CU, yearly_CU],\n",
+    "        \"Total PAYG Cost ($)\": [daily_PAYG, weekly_PAYG, monthly_PAYG, yearly_PAYG],\n",
+    "        \"Total Reserved Cost ($)\": [\n",
+    "            daily_reserved,\n",
+    "            weekly_reserved,\n",
+    "            monthly_reserved,\n",
+    "            yearly_reserved,\n",
+    "        ],\n",
+    "    },\n",
+    "    index=[\"Daily\", \"Weekly\", \"Monthly\", \"Yearly\"],\n",
+    ")\n",
     "\n",
     "print(\"\\n\" + \"🔹\" * 22)\n",
     "print(\"🔹🔹🔹 COST SUMMARY For Proposed Scheduled Runs 🔹🔹🔹\")\n",
@@ -1072,42 +1121,51 @@
     "total_dailycost_reserved = 6.853 * 24\n",
     "F64_CU_per_day = 1536 * 24  # 36,864 CU per day\n",
     "\n",
+    "\n",
     "def calculate_execution_costs(df_filtered):\n",
     "    \"\"\"\n",
     "    Calculate PAYG and Reserved cost per execution based on Compute Unit (CU) usage.\n",
-    "    \n",
+    "\n",
     "    Parameters:\n",
     "    df_filtered (pd.DataFrame): Input DataFrame containing CU(h) column.\n",
     "    total_CU_hours (int, optional): Total Compute Units per hour for the given capacity. Default is 1536 for F64.\n",
-    "    \n",
+    "\n",
     "    Returns:\n",
     "    pd.DataFrame: Updated DataFrame with PAYG and Reserved costs and utilization percentage.\n",
     "    \"\"\"\n",
     "    # Calculate cost per execution\n",
     "    df_filtered = df_filtered.copy()\n",
-    "    df_filtered[\"PAYG Cost($)\"] = ((df_filtered[\"CU(h)\"] / 14) / total_CU_hours) * total_dailycost_PAYG\n",
-    "    df_filtered[\"Reserved Cost($)\"] = ((df_filtered[\"CU(h)\"] / 14) / total_CU_hours) * total_dailycost_reserved\n",
-    "    \n",
+    "    df_filtered[\"PAYG Cost($)\"] = (\n",
+    "        (df_filtered[\"CU(h)\"] / 14) / total_CU_hours\n",
+    "    ) * total_dailycost_PAYG\n",
+    "    df_filtered[\"Reserved Cost($)\"] = (\n",
+    "        (df_filtered[\"CU(h)\"] / 14) / total_CU_hours\n",
+    "    ) * total_dailycost_reserved\n",
+    "\n",
     "    # Compute total CU and costs per day\n",
     "    daily_CU = df_filtered[\"CU(h)\"].sum()\n",
     "    daily_PAYG = df_filtered[\"PAYG Cost($)\"].sum()\n",
     "    daily_reserved = df_filtered[\"Reserved Cost($)\"].sum()\n",
-    "    \n",
+    "\n",
     "    # Create summary DataFrame\n",
-    "    summary_df = pd.DataFrame({\n",
-    "        \"Total CU(h)\": [daily_CU],\n",
-    "        \"Total PAYG Cost ($)\": [daily_PAYG],\n",
-    "        \"Total Reserved Cost ($)\": [daily_reserved],\n",
-    "        \"F64 Limit (CU)\": [F64_CU_per_day],\n",
-    "        \"Utilization (%)\": [(daily_CU / F64_CU_per_day) * 100]\n",
-    "    }, index=[\"Daily\"])\n",
-    "    \n",
+    "    summary_df = pd.DataFrame(\n",
+    "        {\n",
+    "            \"Total CU(h)\": [daily_CU],\n",
+    "            \"Total PAYG Cost ($)\": [daily_PAYG],\n",
+    "            \"Total Reserved Cost ($)\": [daily_reserved],\n",
+    "            \"F64 Limit (CU)\": [F64_CU_per_day],\n",
+    "            \"Utilization (%)\": [(daily_CU / F64_CU_per_day) * 100],\n",
+    "        },\n",
+    "        index=[\"Daily\"],\n",
+    "    )\n",
+    "\n",
     "    print(\"\\n\" + \"🔹\" * 22)\n",
     "    print(\"🔹🔹🔹 COST SUMMARY For Current Runs Schedule 🔹🔹🔹\")\n",
     "    print(\"🔹\" * 22 + \"\\n\")\n",
-    "    \n",
+    "\n",
     "    # Display the updated summary DataFrame\n",
     "    return summary_df\n",
+    "\n",
     "\n",
     "calculate_execution_costs(df_filtered)"
    ]
