chore: restructure code, re-run notebooks with outputs, and format with Black

--- a/prd-workload-cu-analysis.ipynb
+++ b/prd-workload-cu-analysis.ipynb
@@ -132,6 +132,7 @@
    ],
    "source": [
     "import pandas as pd\n",
+    "\n",
     "df = pd.read_csv(\"fabric_capacity_units.csv\")\n",
     "df.head()"
    ]
@@ -143,6 +144,7 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "\n",
     "\n",
     "def clean_data(df):\n",
     "    \"\"\"Cleans and preprocesses the given DataFrame by:\n",
@@ -188,7 +190,7 @@
     "    if \"CU(s)\" in df.columns:\n",
     "        df[\"CU(h)\"] = df[\"CU(s)\"] / 3600\n",
     "\n",
-    "    return df\n"
+    "    return df"
    ]
   },
   {
@@ -519,24 +521,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### CU Calculation basedon Sku Type"
+    "### CU Calculation based on Sku Type"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Total CU Allocation for SKU 64 (day):\n",
-      " - 5,529,600 CU-seconds\n",
-      " - 1,536.0 CU-hours\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def calculate_CU_allocation(sku_capacity, period=\"day\"):\n",
     "    \"\"\"Calculates CU allocation in seconds and hours for a given SKU capacity and time period.\n",
@@ -560,23 +552,44 @@
     "        \"hour\": 1 / hours_per_day,  # 1/24 of a day\n",
     "        \"day\": 1,\n",
     "        \"month\": days_per_month,\n",
-    "        \"year\": days_per_year\n",
+    "        \"year\": days_per_year,\n",
     "    }\n",
     "\n",
     "    if period not in period_multipliers:\n",
-    "        raise ValueError(\"Invalid period. Choose from 'hour', 'day', 'month', or 'year'.\")\n",
+    "        raise ValueError(\n",
+    "            \"Invalid period. Choose from 'hour', 'day', 'month', or 'year'.\"\n",
+    "        )\n",
     "\n",
     "    # Compute total CU allocation\n",
     "    multiplier = period_multipliers[period]\n",
-    "    total_CU_seconds = sku_capacity * seconds_per_minute * minutes_per_hour * hours_per_day * multiplier\n",
+    "    total_CU_seconds = (\n",
+    "        sku_capacity\n",
+    "        * seconds_per_minute\n",
+    "        * minutes_per_hour\n",
+    "        * hours_per_day\n",
+    "        * multiplier\n",
+    "    )\n",
     "    total_CU_hours = total_CU_seconds / 3600  # Convert to CU-hours\n",
     "\n",
-    "    return {\n",
-    "        \"CU-seconds\": total_CU_seconds,\n",
-    "        \"CU-hours\": total_CU_hours\n",
-    "    }\n",
-    "\n",
-    "# Example usage\n",
+    "    return {\"CU-seconds\": total_CU_seconds, \"CU-hours\": total_CU_hours}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total CU Allocation for SKU 64 (day):\n",
+      " - 5,529,600 CU-seconds\n",
+      " - 1,536.0 CU-hours\n"
+     ]
+    }
+   ],
+   "source": [
     "sku_capacity = 64  # Example SKU type (F64)\n",
     "period = \"day\"  # Can be \"hour\", \"day\", \"month\", or \"year\"\n",
     "\n",
@@ -591,14 +604,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cost Per Day for Each Execution\n"
+      "\n",
+      "🔹🔹🔹🔹🔹🔹🔹🔹🔹🔹🔹🔹🔹🔹🔹🔹🔹🔹🔹🔹\n",
+      "🔹🔹🔹 Cost Per Day for Each Execution 🔹🔹🔹\n",
+      "🔹🔹🔹🔹🔹🔹🔹🔹🔹🔹🔹🔹🔹🔹🔹🔹🔹🔹🔹🔹\n",
+      "\n"
      ]
     },
     {
@@ -980,7 +997,7 @@
        "33     0.038645      0.000497          0.000296  "
       ]
      },
-     "execution_count": 30,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1008,7 +1025,7 @@
     "    \"\"\"\n",
     "\n",
     "    # Calculate cost per execution\n",
-    "    df_filtered = df_filtered.copy()\n",
+    "    # df_filtered = df_filtered.copy()\n",
     "    df_filtered[\"PAYG Cost($)\"] = (\n",
     "        (df_filtered[\"CU(h)\"] / 14) / TOTAL_CU_HOURS\n",
     "    ) * TOTAL_DAILYCOST_PAYG\n",
@@ -1016,7 +1033,9 @@
     "        (df_filtered[\"CU(h)\"] / 14) / TOTAL_CU_HOURS\n",
     "    ) * TOTAL_DAILYCOST_RESERVED\n",
     "\n",
-    "    print(\"Cost Per Day for Each Execution\")\n",
+    "    print(\"\\n\" + \"🔹\" * 20)\n",
+    "    print(\"🔹🔹🔹 Cost Per Day for Each Execution 🔹🔹🔹\")\n",
+    "    print(\"🔹\" * 20 + \"\\n\")\n",
     "    return df_filtered\n",
     "\n",
     "\n",
