style: Reformatted files with black

--- a/Infor-CU-cost-analysis.ipynb
+++ b/Infor-CU-cost-analysis.ipynb
@@ -378,7 +378,7 @@
     "    \"Item kind\",\n",
     "    \"Successful count\",\n",
     "    \"Failed count\",\n",
-    "    \"Duration (s)\"\n",
+    "    \"Duration (s)\",\n",
     "]\n",
     "df.drop(columns=columns_to_drop, inplace=True, errors=\"ignore\")\n",
     "\n",
@@ -554,7 +554,7 @@
     "seconds_per_minute = 60\n",
     "minutes_per_hour = 60\n",
     "hours_per_day = 24\n",
-    "PAYG = 11.52 # $ per hour\n",
+    "PAYG = 11.52  # $ per hour\n",
     "reserved = 6.853  # $ per hour\n",
     "\n",
     "# Compute total CU allocation\n",
@@ -716,11 +716,10 @@
     "\n",
     "    # Calculate cost per execution\n",
     "\n",
-    "    \n",
     "    df_filtered[\"PAYG Cost($)\"] = (\n",
     "        (df_filtered[\"CU(h)\"] / 14) / TOTAL_CU_HOURS\n",
     "    ) * TOTAL_DAILYCOST_PAYG\n",
-    "    \n",
+    "\n",
     "    df_filtered[\"Reserved Cost($)\"] = (\n",
     "        (df_filtered[\"CU(h)\"] / 14) / TOTAL_CU_HOURS\n",
     "    ) * TOTAL_DAILYCOST_RESERVED\n",
@@ -937,7 +936,7 @@
    ],
    "source": [
     "# Compute the total sums dynamically from df_filtered\n",
-    "total_CU_4runs = df_filtered[\"CU(h)\"].sum()/14\n",
+    "total_CU_4runs = df_filtered[\"CU(h)\"].sum() / 14\n",
     "total_PAYG_4runs = df_filtered[\"PAYG Cost($)\"].sum()\n",
     "total_reserved_4runs = df_filtered[\"Reserved Cost($)\"].sum()\n",
     "\n",
