--- a/prd-workload-cu-analysis.ipynb
+++ b/prd-workload-cu-analysis.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n"
+    "import pandas as pd"
    ]
   },
   {
@@ -248,21 +248,21 @@
     "    Returns:\n",
     "        pd.DataFrame: The cleaned DataFrame.\n",
     "    \"\"\"\n",
-    "    \n",
+    "\n",
     "    # Drop rows that contain any NaN values in any column\n",
-    "    df = df.dropna(how='any', axis=0)\n",
+    "    df = df.dropna(how=\"any\", axis=0)\n",
     "\n",
     "    # Check if the essential columns exist to avoid KeyError during extraction\n",
     "    if \"Item name\" in df.columns and \"CU (s)\" in df.columns:\n",
     "        # Extract 'Item name' and 'CU (s)', and rename the columns\n",
     "        df = df[[\"Item name\", \"CU (s)\"]]\n",
     "        df = df.rename(columns={\"Item name\": \"Item_name\", \"CU (s)\": \"CU(s)\"})\n",
-    "        \n",
+    "\n",
     "        # Convert CU(s) to CU(h) if CU(s) exists\n",
     "        if \"CU(s)\" in df.columns:\n",
     "            df[\"CU(h)\"] = df[\"CU(s)\"] / 3600\n",
     "\n",
-    "    return df\n"
+    "    return df"
    ]
   },
   {
@@ -440,15 +440,17 @@
     "        \"hour\": 1,\n",
     "        \"day\": hours_per_day,\n",
     "        \"month\": days_per_month * hours_per_day,\n",
-    "        \"year\": days_per_year * hours_per_day\n",
+    "        \"year\": days_per_year * hours_per_day,\n",
     "    }\n",
     "\n",
     "    # Validate period\n",
     "    if period not in period_multipliers:\n",
-    "        raise ValueError(\"Invalid period. Choose from 'hour', 'day', 'month', or 'year'.\")\n",
+    "        raise ValueError(\n",
+    "            \"Invalid period. Choose from 'hour', 'day', 'month', or 'year'.\"\n",
+    "        )\n",
     "\n",
     "    # Define cost rates per 64 CU-hours\n",
-    "    PAYG_rate_per_64_CU_hours = 11.52 \n",
+    "    PAYG_rate_per_64_CU_hours = 11.52\n",
     "    reservation_rate_per_64_CU_hours = 6.853  # Reservation cost for 64 CU-hours\n",
     "\n",
     "    # Compute total CU-hours based on the selected period and value\n",
@@ -467,6 +469,7 @@
     "\n",
     "    return total_CU_seconds, total_CU_hours, cost_PAYG, cost_reservation\n",
     "\n",
+    "\n",
     "# Example usage\n",
     "CU_seconds, CU_hours, cost_PAYG, cost_reservation = calculate_CU_and_cost(64, \"day\", 1)\n",
     "\n",
@@ -474,7 +477,7 @@
     "print(f\"CU-seconds: {round(CU_seconds, 2)} seconds\")\n",
     "print(f\"CU-hours: {round(CU_hours, 2)} hours\")\n",
     "print(f\"Cost (PAYG): ${round(cost_PAYG, 2)}\")\n",
-    "print(f\"Cost (Reservation): ${round(cost_reservation, 2)}\")\n"
+    "print(f\"Cost (Reservation): ${round(cost_reservation, 2)}\")"
    ]
   },
   {
